--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-**/.temp
-**/.cache
+**/.temp/
+**\.temp\
+**/.cache/
 
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
