--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,8 @@ jobs:
         with:
           # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
           fetch-depth: 0
-
+          repository: csDeng/csDeng.github.io
+          ref: master
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -40,6 +41,7 @@ jobs:
         with:
           # 部署到 gh-pages 分支
           target_branch: master
+		  
           # 部署目录为 VuePress 的默认输出目录
           build_dir: docs/.vuepress/dist 
         env:
